k8s-manifests/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-backend
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "250m"
